# seo-optimization-product-cards

./: .env  .gitignore  .pre-commit-config.yaml  README.md  db_params.py  docker-compose.yml  k8s_start.sh  k8s_stop.sh  main.py  pyproject.toml
.dvc/: config
backend/: Dockerfile  pyproject.toml
backend/.dvc/: config
backend/data/: .gitignore  model.pth.dvc  wildberries.zip.dvc
backend/src/: db_connect.py  main.py
backend/src/bot/: formatting_category.py  send_detail_category_message.py  send_global_category_message.py  send_message.py
backend/src/celery/: config.py  tasks.py  utils.py
backend/src/db/: db_connect.py  db_execute_query.py  db_image.py
backend/src/dto/: prediction.py  train.py  user.py
backend/src/ml/: dataset.py  loss.py  models.py  predict.py  train.py  transforms.py
backend/src/routes/: model.py  users.py
configs/: nginx.conf
diplom_text/: .gitignore  bibliography.aux  bibliography.tex  refs.bib  title_vkr.tex  vkr.tex
grafana/dashboards/: my_fast_api.json
k8s/: backend-deployment.yaml  backend-service.yaml  celery-worker-deployment.yaml  celery-worker-service.yaml  flower-deployment.yaml  flower-service.yaml  namespace.yaml  nginx-config-map.yaml  nginx-deployment.yaml  nginx-service.yaml  postgres-config-map.yaml  postgres-deployment.yaml  postgres-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  secrets.yaml  telegram-deployment.yaml  telegram-service.yaml
migrations/: create-tables.sql  init_tables.py
monitoring/: prometheus.yml
notebooks/: README.md  converting images.ipynb  fashion_mnist_cnn.ipynb  image_captioning.ipynb  image_captioning_RNN-attention.ipynb  image_captioning_RNN-parallel-weighted.ipynb  image_captioning_RNN-parallel-weighted_attention_weighted.ipynb  image_captioning_RNN-parallel.ipynb  image_captioning_RNN-parallel_attention_weighted.ipynb  image_captioning_RNN-paraller.ipynb  image_captioning_RNN.ipynb  image_captioning_RNN_attention.ipynb  image_captioning_RNN_attention_weighted.ipynb  image_captioning_dataset.ipynb  parsing-part1.ipynb  parsing-part2.ipynb  parsing_statistics.ipynb  wb-classificator.ipynb  wb_classificator.ipynb  wb_classificator_2.ipynb  wb_classificator_mobilenet-tree.ipynb  wb_classificator_mobilenet.ipynb
notebooks/parsing/: converting images.ipynb  parsing-part2.ipynb  parsing_statistics.ipynb
src/: config.py
src/backend/: init.py  main.py
src/migrations/: init_tables.py
src/telegram/: bot.py  handlers.py
telegram/: Dockerfile  pyproject.toml
telegram/src/: handlers.py  main.py
