[tool.poetry]
name = "seo-optimization-product-cards"
version = "0.1.0"
description = "Seo optimization product cards for marketplaces"
authors = ["Dmitry Kulikov <dakulikov2001@mail.ru>"]
readme = "README.md"
repository = "https://github.com/Kulikov17/seo-optimization-product-cards"
keywords = ["marketplaces", "data science", "deep learning", "seo"]
packages = [{include = "seo-optimization-product-cards"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.1.0"
torchvision = "^0.16.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
dvc = {extras = ["gdrive"], version = "^3.33.4"}
flake8-pyproject = "^1.2.3"
pyproject-pre-commit = "^0.1.3"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['D100', 'D101', 'D103', 'T201']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
